tests/error/modifier_errors/linear_check_in_block.err
Error: Copy violation (at $FILE:15:16)
   | 
13 |     with control(q):
14 |         xs = array(1, 2, 3)
15 |         foo(xs, xs)
   |                 ^^ Variable `xs` with non-copyable type `array[int, 3]` cannot
   |                    be borrowed ...
   | 
15 |         foo(xs, xs)
   |             -- since it was already borrowed here

Help: Consider copying `xs` instead of moving it: `xs.copy()`

Guppy compilation failed due to 1 previous error
